--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
-.logo {
-  display: flex;
+.App {
+  width: 100vw;
+  height: 100vh;
+  background-image: linear-gradient(90deg, #002F52 35%, #326589);
+}
 
+li {
+  list-style: none;
 }
